--- a/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
+++ b/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
@@ -68,26 +68,27 @@
                     {
                         foreach (var item in Model.purchaserequestdetailModels)
                         {
-                            <tr>
-                                <td hidden>@item.Id</td>
-                                <td hidden>@item.ProductId</td>
-                                <td><select disabled="disabled"><option>@item.namabarang</option></select></td>
-                                <td>@item.tot_pemakaian</td>
-                                <td>@item.sisa_stok</td>
-                                <td>@item.qty</td>
-                                <td><input type="text" class="form-control" value="@item.qty_add" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.reason_add" disabled="disabled" /></td>
-                                <td>@item.total</td>
-                                <td>@item.nama_by_ho</td>
-                                <td>@item.qty_by_ho</td>
-                                <td>@item.remark_by_ho</td>
-                                <td>
-                                    <button class="save-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseRequest/EditPurchaseRequestDetail" style="display:none;">Save</button>
-                                    <button class="edit-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseRequest/EditPurchaseRequestDetail">Edit</button>
-                                    <button class="delete-purchaseorderdetail btn btn-danger btn-sm" disabled>Delete</button>
-                                    <img src="~/Content/images/loading.gif" style="height: 30px;display:none;" class="image-loading" />
-                                </td>
-                            </tr>
+                    <tr>
+                        <td hidden>@item.Id</td>
+                        <td hidden>@item.ProductId</td>
+                        <td><select disabled="disabled"><option>@item.namabarang</option></select></td>
+                        <td>@item.tot_pemakaian</td>
+                        <td>@item.sisa_stok</td>
+                        <td>@item.qty</td>
+                        <td><input type="text" class="form-control" value="@item.qty_add" disabled="disabled" /></td>
+                        <td><input type="text" class="form-control" value="@item.reason_add" disabled="disabled" /></td>
+                        <td>@item.total</td>
+                        <td>@item.nama_by_ho</td>
+                        <td>@item.qty_by_ho</td>
+                        <td>@item.remark_by_ho</td>
+                        <td hidden></td>
+                        <td>
+                            <button class="save-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseRequest/EditPurchaseRequestDetail" style="display:none;">Save</button>
+                            <button class="edit-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseRequest/EditPurchaseRequestDetail">Edit</button>
+                            <button class="delete-purchaseorderdetail btn btn-danger btn-sm" disabled>Delete</button>
+                            <img src="~/Content/images/loading.gif" style="height: 30px;display:none;" class="image-loading" />
+                        </td>
+                    </tr>
                         }
                     }
                 </tbody>
@@ -111,7 +112,7 @@
                     <tr id="purchaseorderdetail">
                         <td hidden><input type="text" hidden id="PurchaseRequestDetailId" /></td>
                         <td hidden><input type="text" hidden id="ProductId" /></td>
-                        <td><select id="namabarang" class="form-control" style="display:block"></select><input type="text" id="newproductname" class="form-control" style="display:none" placeholder="New Product"/></td>
+                        <td><select id="namabarang" class="form-control" style="display:block"></select><input type="text" id="newproductname" class="form-control" style="display:none" placeholder="New Product"/><button style="display:none" class="btn btn-xs btn-success addnewproduct">add</button> </td>
                         <td><input type="checkbox" id="newproduct"/></td>
                         <td><input type="text" class="form-control" placeholder="tot_pemakaian" id="tot_pemakaian" value="0" readonly/></td>
                         <td><input type="text" class="form-control" placeholder="sisa_stok" id="sisa_stok" value="0" readonly/></td>
