--- a/Klinik.Web/Views/PurchaseRequest/PurchaseRequestList.cshtml
+++ b/Klinik.Web/Views/PurchaseRequest/PurchaseRequestList.cshtml
@@ -14,7 +14,7 @@
             <a href="#" class="fa fa-caret-down"></a>
         </div>
         <h5 class="panel-title">
-            @Klinik.Resources.UIMessages.PurchaseOrderList
+            @Klinik.Resources.UIMessages.PurchaseRequestList
             <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
         </h5>
     </header>
