--- a/Klinik.Web/Views/DeliveryOrder/PrintDeliveryOrder.cshtml
+++ b/Klinik.Web/Views/DeliveryOrder/PrintDeliveryOrder.cshtml
@@ -58,23 +58,29 @@
                 <table class="table table-bordered">
                     <thead>
                         <tr>
-                            <th><h4>Nama Brang</h4></th>
-                            <th><h4>Qty Do</h4></th>
-                            <th><h4>Qty Adj</h4></th>
-                            <th><h4>Remark Do</h4></th>
-                            <th><h4>Remark Adj</h4></th>
+                            <th><h4>Nama Obat</h4></th>
+                            <th><h4>Total Qty Request</h4></th>
+                            <th><h4>Nama By HO</h4></th>
+                            <th><h4>Qty By HP</h4></th>
+                            <th><h4>Remark By HO</h4></th>
+                            <th><h4>Qty Adjustment</h4></th>
+                            <th><h4>Remark Adjustment</h4></th>
+                            <th><h4>Recived</h4></th>
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (var item in Model.deliveryOrderDetailModels)
                         {
-                            <tr>
-                                <td>@item.namabarang</td>
-                                <td><a href="#">@item.qty_do</a></td>
-                                <td class="text-right">@item.qty_adj</td>
-                                <td class="text-right">@item.remark_do</td>
-                                <td class="text-right">@item.remark_adj</td>
-                            </tr>
+                        <tr>
+                            <td class="text-right">@item.namabarang</td>
+                            <td class="text-right">@item.qty_request</td>
+                            <td class="text-right">@item.nama_by_ho</td>
+                            <td class="text-right">@item.qty_by_HP</td>
+                            <td class="text-right">@item.remark_by_ho</td>
+                            <td class="text-right">@item.qty_adj</td>
+                            <td class="text-right">@item.remark_adj</td>
+                            <td class="text-right"><input type="checkbox" value="@(item.Recived == true ? "true" : "false")" @(item.Recived == true ? "checked" : "") disabled></td>
+                        </tr>
                         }
                     </tbody>
                 </table>
