--- a/Klinik.Web/Views/PurchaseOrder/PrintPurchaseOrder.cshtml
+++ b/Klinik.Web/Views/PurchaseOrder/PrintPurchaseOrder.cshtml
@@ -71,7 +71,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var item in Model.purchaseOrderdetailModels)
+                    @foreach (var item in Model.PurchaseOrderDetails)
                     {
                     <tr>
                         <td>@item.namabarang</td>
