--- a/Klinik.Web/Views/Pharmacy/ListAllGivenMedicine.cshtml
+++ b/Klinik.Web/Views/Pharmacy/ListAllGivenMedicine.cshtml
@@ -27,7 +27,19 @@
     </header>
 
     <div class="panel-body">
+        <div class="form-group">
+            <div class="col-md-3">
+                <label class="control-label">Name :  @ViewBag.NamaPatient</label>
+            </div>
+         
+        </div>
 
+        <div class="form-group">
+            <div class="col-md-3">
+                <label class="control-label">Birthdate :   @ViewBag.Birthdate</label>
+            </div>
+          
+        </div>
         <div style="width:100%; margin:0 auto">
             <table id="tbListObatPasien" class="table table-striped table-bordered dt-responsive" cellspacing="0">
                 <thead>
