--- a/Klinik.Web/Views/PurchaseOrder/PurchaseOrderList.cshtml
+++ b/Klinik.Web/Views/PurchaseOrder/PurchaseOrderList.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Klinik.Entities.PurchaseOrder.PurchaseOrderModel
-
+@using Klinik.Features;
 @{
     ViewBag.Title = "DeliveryOrderList";
 }
@@ -109,10 +109,18 @@
                 {
                     "render": function (data, type, full, meta)
                     {
-                        var valisasi = full['Validasi'] != null ? '' : " | <button class='btn btn-success btn-xs' onclick='Validasi(" + full['Id'] + ")' >Validasi</button>";
-                        var type = full['approve'] == null ? 'Approve' : 'Print';
-                        var button = full['approve'] == null ? "<button class='btn btn-success btn-xs' onclick='" + type + "(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Approve</button>" : '<a class="btn btn-success btn-xs" href="/PurchaseOrder/PrintPurchaseOrder?id=' + full.Id + '">' + type + '</a>'+ valisasi;
-                        return '<a class="btn btn-info btn-xs" href="/PurchaseOrder/CreateOrEditPurchaseOrder?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger btn-xs' onclick='Delete(" + full['Id'] + ")' disabled='disabled'>@Klinik.Resources.UIMessages.Delete</button>" + " |" + button
+                        var valisasi = full.approve != null ? " | <button class='btn btn-success btn-xs' onclick='Validasi(" + full['Id'] + ")' >Validasi</button>" : "";
+                        var approve = full.approve != null ? "" : " | <button class='btn btn-success btn-xs' onclick='Approve(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Approve</button>";
+                        
+
+                        if (@GeneralHandler.authorized("VALIDATION_M_PURCHASEORDER")) {
+                            valisasi = "";
+                        }
+                        if (@GeneralHandler.authorized("APPROVE_M_PURCHASEORDER")) {
+                            approve = "";
+                        }
+                        var button = valisasi + approve;
+                        return '<a class="btn btn-info btn-xs" href="/PurchaseOrder/CreateOrEditPurchaseOrder?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger btn-xs' onclick='Delete(" + full['Id'] + ")' disabled='disabled'>@Klinik.Resources.UIMessages.Delete</button>" + button
                     }
                 }
 
