Update screen farmasi

--- a/Klinik.Web/Views/Poli/FormExamine.cshtml
+++ b/Klinik.Web/Views/Poli/FormExamine.cshtml
@@ -474,7 +474,8 @@
                                                 </tbody>
                                                 <tfoot>
                                                     <tr>
-                                                        <td><input id="medicineName" type="text" class="form-control" placeholder="@Klinik.Resources.UIMessages.TypeMedicineNameHere" /><input hidden type="text" id="idMedicine" /></td>
+                                                        <td><input id="medicineName" type="text" class="form-control" placeholder="@Klinik.Resources.UIMessages.TypeMedicineNameHere" />
+                                                        <input hidden type="text" id="idMedicine" /></td>
                                                         <td><input id="medicineStock" type="text" class="form-control" disabled /></td>
                                                         <td><input id="medicineDose" type="text" class="form-control" /></td>
                                                         <td><input id="medicineAmount" type="text" class="form-control" /></td>
