--- a/Klinik.Web/Views/PurchaseOrder/CreateOrEditPurchaseOrder.cshtml
+++ b/Klinik.Web/Views/PurchaseOrder/CreateOrEditPurchaseOrder.cshtml
@@ -240,7 +240,7 @@
             var name = $("TD", row).eq(0).html();
             if (confirm("Do you want to delete: " + name)) {
                 //Get the reference of the Table.
-                var table = $("#tblDeliveryOrder")[0];
+                var table = $("#tblPurchaseOrder")[0];
 
                 //Delete the Table row using it's Index.
                 table.deleteRow(row[0].rowIndex);
