--- a/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
+++ b/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
@@ -60,7 +60,10 @@
                         <th>Nama By HO</th>
                         <th>Qty By HP</th>
                         <th>Remark By HO</th>
-                        <th>Action</th>
+                        @if (Model.Validasi < 1)
+                        {
+                            <th>Action</th>
+                        }
                     </tr>
                 </thead>
                 <tbody>
@@ -68,118 +71,80 @@
                     {
                         foreach (var item in Model.purchaserequestdetailModels)
                         {
-                    <tr>
-                        <td hidden>@item.Id</td>
-                        <td hidden>@item.ProductId</td>
-                        <td><select disabled="disabled"><option>@item.namabarang</option></select></td>
-                        <td>@item.tot_pemakaian</td>
-                        <td>@item.sisa_stok</td>
-                        <td>@item.qty</td>
-                        <td><input type="text" class="form-control" value="@item.qty_add" disabled="disabled" /></td>
-                        <td><input type="text" class="form-control" value="@item.reason_add" disabled="disabled" /></td>
-                        <td>@item.total</td>
-                        <td>@item.nama_by_ho</td>
-                        <td>@item.qty_by_ho</td>
-                        <td>@item.remark_by_ho</td>
-                        <td hidden></td>
-                        <td>
-                            <button class="save-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseRequest/EditPurchaseRequestDetail" style="display:none;">Save</button>
-                            <button class="edit-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseRequest/EditPurchaseRequestDetail">Edit</button>
-                            <button class="delete-purchaseorderdetail btn btn-danger btn-sm" disabled>Delete</button>
-                            <img src="~/Content/images/loading.gif" style="height: 30px;display:none;" class="image-loading" />
-                        </td>
-                    </tr>
+                            <tr>
+                                <td hidden>@item.Id</td>
+                                <td hidden>@item.ProductId</td>
+                                <td><select disabled="disabled"><option>@item.namabarang</option></select></td>
+                                <td>@item.tot_pemakaian</td>
+                                <td>@item.sisa_stok</td>
+                                <td>@item.qty</td>
+                                <td><input type="text" class="form-control" value="@item.qty_add" disabled="disabled" /></td>
+                                <td><input type="text" class="form-control" value="@item.reason_add" disabled="disabled" /></td>
+                                <td>@item.total</td>
+                                <td>@item.nama_by_ho</td>
+                                <td>@item.qty_by_ho</td>
+                                <td>@item.remark_by_ho</td>
+                                <td hidden></td>
+                                @if (Model.Validasi == null)
+                                {
+                                    <td>
+
+                                        <button class="save-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseRequest/EditPurchaseRequestDetail" style="display:none;">Save</button>
+                                        <button class="edit-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseRequest/EditPurchaseRequestDetail">Edit</button>
+                                        <button class="delete-purchaseorderdetail btn btn-danger btn-sm" disabled>Delete</button>
+                                        <img src="~/Content/images/loading.gif" style="height: 30px;display:none;" class="image-loading" />
+                                        }
+                                    </td>
+                                }
+                            </tr>
                         }
                     }
                 </tbody>
-                <tfoot>
-                    <tr>
-                        <th hidden>Id Obat</th>
-                        <th>Nama Obat</th>
-                        <th>New Product</th>
-                        <th>Total Pemakaian</th>
-                        <th>Sisa Stock</th>
-                        <th>Qty Request</th>
-                        <th>Qty add</th>
-                        <th>Reason add</th>
-                        <th>Total</th>
-                        <th>Nama By HO</th>
-                        <th>Qty By HP</th>
-                        <th>Remark By HO</th>
-                        <th hidden>Type</th>
-                        <th>Action</th>
-                    </tr>
-                    <tr id="purchaseorderdetail">
-                        <td hidden><input type="text" hidden id="PurchaseRequestDetailId" /></td>
-                        <td hidden><input type="text" hidden id="ProductId" /></td>
-                        <td><select id="namabarang" class="form-control" style="display:block"></select><input type="text" id="newproductname" class="form-control" style="display:none" placeholder="New Product"/><button style="display:none" class="btn btn-xs btn-success addnewproduct">add</button> </td>
-                        <td><input type="checkbox" id="newproduct"/></td>
-                        <td><input type="text" class="form-control" placeholder="tot_pemakaian" id="tot_pemakaian" value="0" readonly/></td>
-                        <td><input type="text" class="form-control" placeholder="sisa_stok" id="sisa_stok" value="0" readonly/></td>
-                        <td><input type="text" class="form-control" placeholder="Qty Request" id="qty" value="0" readonly/></td>
-                        <td><input type="text" class="form-control" placeholder="qty_add" id="qty_add" value="" /></td>
-                        <td><input type="text" class="form-control" placeholder="reason_add" id="reason_add" value="" /></td>
-                        <td><input type="text" class="form-control" placeholder="total" id="total" value="" readonly/></td>
-                        <td><input type="text" class="form-control" placeholder="nama_by_ho" id="nama_by_ho" value="" readonly/></td>
-                        <td><input type="text" class="form-control" placeholder="qty_by_ho" id="qty_by_ho" value="" readonly/></td>
-                        <td><input type="text" class="form-control" placeholder="remark_by_ho" id="remark_by_ho" value="" readonly/></td>
-                        <td><input type="button" id="btnAdd" class="btn btn-success float-right" value="Add" /></td>
-                    </tr>
-                </tfoot>
-            </table>
+                @if (Model.Validasi == null)
+                {
+                    <tfoot>
+                        <tr>
+                            <th hidden>Id Obat</th>
+                            <th>Nama Obat</th>
+                            <th>New Product</th>
+                            <th>Total Pemakaian</th>
+                            <th>Sisa Stock</th>
+                            <th>Qty Request</th>
+                            <th>Qty add</th>
+                            <th>Reason add</th>
+                            <th>Total</th>
+                            <th>Nama By HO</th>
+                            <th>Qty By HP</th>
+                            <th>Remark By HO</th>
+                            <th hidden>Type</th>
+                            <th>Action</th>
+                        </tr>
+                        <tr id="purchaseorderdetail">
+                            <td hidden><input type="text" hidden id="PurchaseRequestDetailId" /></td>
+                            <td hidden><input type="text" hidden id="ProductId" /></td>
+                            <td><select id="namabarang" class="form-control" style="display:block"></select><input type="text" id="newproductname" class="form-control" style="display:none" placeholder="New Product" /><button style="display:none" class="btn btn-xs btn-success addnewproduct">add</button> </td>
+                            <td><input type="checkbox" id="newproduct" /></td>
+                            <td><input type="text" class="form-control" placeholder="tot_pemakaian" id="tot_pemakaian" value="0" readonly /></td>
+                            <td><input type="text" class="form-control" placeholder="sisa_stok" id="sisa_stok" value="0" readonly /></td>
+                            <td><input type="text" class="form-control" placeholder="Qty Request" id="qty" value="0" readonly /></td>
+                            <td><input type="text" class="form-control" placeholder="qty_add" id="qty_add" value="" /></td>
+                            <td><input type="text" class="form-control" placeholder="reason_add" id="reason_add" value="" /></td>
+                            <td><input type="text" class="form-control" placeholder="total" id="total" value="" readonly /></td>
+                            <td><input type="text" class="form-control" placeholder="nama_by_ho" id="nama_by_ho" value="" readonly /></td>
+                            <td><input type="text" class="form-control" placeholder="qty_by_ho" id="qty_by_ho" value="" readonly /></td>
+                            <td><input type="text" class="form-control" placeholder="remark_by_ho" id="remark_by_ho" value="" readonly /></td>
+                            <td><input type="button" id="btnAdd" class="btn btn-success float-right" value="Add" /></td>
+                        </tr>
+                    </tfoot>
+                }
+                </table>
         </div>
         <br />
-        @*<form id="purchaseorderdetail">
-            <div class="form-group">
-                <input type="text" hidden id="PurchaseRequestDetailId" />
-                <input type="text" hidden id="ProductId" />
-                <div class="row">
-                    <div class="col-md-3">
-                        <select id="namabarang" class="form-control"></select>
-                    </div>
-                    <div class="col-md-3">
-                        <input type="text" class="form-control" placeholder="tot_pemakaian" id="tot_pemakaian" value="" />
-                    </div>
-                    <div class="col-md-3">
-                        <input type="text" class="form-control" placeholder="sisa_stok" id="sisa_stok" value="" />
-                    </div>
-                    <div class="col-md-3">
-                        <input type="text" class="form-control" placeholder="qty" id="qty" value="" />
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="row">
-                    <div class="col-md-3">
-                        <input type="text" class="form-control" placeholder="qty_add" id="qty_add" value="" />
-                    </div>
-                    <div class="col-md-3">
-                        <input type="text" class="form-control" placeholder="reason_add" id="reason_add" value="" />
-                    </div>
-                    <div class="col-md-3">
-                        <input type="text" class="form-control" placeholder="total" id="total" value="" />
-                    </div>
-                    <div class="col-md-3">
-                        <input type="text" class="form-control" placeholder="nama_by_ho" id="nama_by_ho" value="" />
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="row marginbutton">
-                    <div class="col-md-3">
-                        <input type="text" class="form-control" placeholder="qty_by_ho" id="qty_by_ho" value="" />
-                    </div>
-                    <div class="col-md-9">
-                        <textarea type="text" class="namaobat form-control" placeholder="remark_by_ho" id="remark_by_ho"></textarea>
-                    </div>
-                </div>
-            </div>
-            <footer class="col-md-12 text-right">
-                <input type="button" id="btnAdd" class="btn btn-success float-right" value="Add" />
-            </footer>
-        </form>*@
-        <footer class="panel-footer">
+    <footer class="panel-footer">
+        @if (Model.Validasi == null)
+        {
             <button type="submit" class="btn btn-primary savepurchasedetail" data-parameterone="_deliveryorderpusat" data-parametertwo="deliveryOrderDetailpusatModels" data-url="/PurchaseRequest/CreateOrEditPurchaseRequest" data-redirect="/PurchaseRequest/PurchaseRequestList">@Klinik.Resources.UIMessages.Save</button>
+        }
             <button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
         </footer>
     </div>
