--- a/Klinik.Web/Views/PurchaseRequest/PurchaseRequestList.cshtml
+++ b/Klinik.Web/Views/PurchaseRequest/PurchaseRequestList.cshtml
@@ -168,7 +168,7 @@
                         var valisasi = full['Validasi'] != null ? '' : " <button class='btn btn-success btn-xs' onclick='Validasi(" + full['Id'] + ")' >Validasi</button>";
                         var type = 'Approve';
                         var button = full['approve'] == null ? "<button class='btn btn-success btn-xs' onclick='" + type + "(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Approve</button>" : valisasi;
-                        if (@GeneralHandler.authorized("APPROVE_M_PURCHASEREQUEST","VALIDATION_M_PURCHASEREQUEST")) {
+                        if (!@GeneralHandler.authorized("APPROVE_M_PURCHASEREQUEST","VALIDATION_M_PURCHASEREQUEST")) {
                             button = "";
                         }
                         return full['Validasi'] != null ? '<a class="btn btn-info btn-xs" href="/PurchaseRequest/CreateOrEditPurchaseRequest?id=' + full.Id + '">View</a>' : '<a class="btn btn-info btn-xs" href="/PurchaseRequest/CreateOrEditPurchaseRequest?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger btn-xs' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>" + " |" + button
