--- a/Klinik.Web/Views/DeliveryOrder/DeliveryOrderList.cshtml
+++ b/Klinik.Web/Views/DeliveryOrder/DeliveryOrderList.cshtml
@@ -86,8 +86,8 @@
                 { "data": "Id", "Id": "Id", "autoWidth": false },
                 { "data": "donumber", "donumber": "donumber", "autoWidth": true },
                 { "data": "createformat", "createformat": "createformat", "autoWidth": true },
-                { "data": "dodest", "dodest": "dodest", "autoWidth": false },
-                { "data": "CreatedBy", "CreatedBy": "CreatedBy", "autoWidth": true },
+                { "data": "gudangtujuan", "gudangtujuan": "gudangtujuan", "autoWidth": false },
+                { "data": "approveby", "approveby": "approveby", "autoWidth": true },
                 { "data": "CreatedBy", "CreatedBy": "CreatedBy", "autoWidth": true },
                 {
                     "render": function (data, type, full, meta)
@@ -100,10 +100,10 @@
                         if ( full['Recived'] == null) {
                             type = full['approve'] == null ? 'Approve' : 'Print';
                             button = full['approve'] == null ? " | <button class='btn btn-success btn-sm' onclick='" + type + "(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Approve</button>" : '<a class="btn btn-success btn-sm" href="/DeliveryOrder/PrintDeliveryOrder?id=' + full.Id + '">' + type + '</a>';
-                            buttonrecived = full['approve'] != null ? ' | <a class="btn btn-success btn-sm" href="/DeliveryOrder/ReceivedOrder?id=' + full.Id + '">Recived</a>' : "";
+                            buttonrecived = full['approve'] != null ? ' <a class="btn btn-success btn-sm" href="/DeliveryOrder/ReceivedOrder?id=' + full.Id + '">Recived</a>' : "";
                             buttondelete = " | <button class='btn btn-danger btn-sm' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>";
                         }
-                        return '<a class="btn btn-info btn-sm" href="/DeliveryOrder/CreateOrEditDeliveryOrder?id=' + full.Id + '">' + editorview + '</a>  ' + buttondelete + button + buttonrecived
+                        return '<a class="btn btn-info btn-sm" href="/DeliveryOrder/CreateOrEditDeliveryOrder?id=' + full.Id + '">' + editorview + '</a>  ' + button + buttonrecived
                     }
                 }
 
