--- a/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
+++ b/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
@@ -89,7 +89,7 @@
                                     <td>
 
                                         <button class="save-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseRequest/EditPurchaseRequestDetail" style="display:none;">Save</button>
-                                        <button class="edit-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseRequest/EditPurchaseRequestDetail">Edit</button>
+                                        <button class="edit-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseRequest/EditPurchaseRequestDetail" disabled>Edit</button>
                                         <button class="delete-purchaseorderdetail btn btn-danger btn-sm" disabled>Delete</button>
                                         <img src="~/Content/images/loading.gif" style="height: 30px;display:none;" class="image-loading" />
                                     </td>
