--- a/Klinik.Web/Content/Custom/Custom.css
+++ b/Klinik.Web/Content/Custom/Custom.css
@@ -15,4 +15,8 @@
     text-align: center !important;
     color: white !important;
     background-color: #34495e !important;
-}
+},
+
+.caption-table {
+     text-align: center !important;
+ }
